fixed start wave